# Mission-Control

./: .env.example  .gitignore  CLAUDE.MD  Jenkinsfile  README.md  architecture.html  docker-compose.yml  pyproject.toml
ci/: README.md  run_pipeline_demo.sh
ci/demo/: baseline.pass.json  baseline.regressed.json  setup.py
ci/demo/sandbox/: README.md
ci/demo/tasks/: demo-inspect.yaml  demo-investigate.yaml
deploy/launchd/: .gitignore  com.mission-control.service.plist.example  com.mission-control.slack.plist.example  mc.env.example  wrapper.sh.example
docs/: DEPLOY.md  EVAL_GATE.md  PHASE1_FINDINGS.md  PHASE2_FINDINGS.md  PHASE3_FINDINGS.md  PHASE4_FINDINGS.md  PHASE5A_FINDINGS.md  PHASE5B_FINDINGS.md  PHASE5C_FINDINGS.md  PHASE6_FINDINGS.md  PHASE8_EXECUTION_GAPS.md  PHASE8_FINDINGS.md
golden/: README.md  baseline.json
golden/sandbox/: AGENTS.md  README.md  calc.py  inventory.py  strings.py
golden/sandbox/.aidlc-rule-details/: phases.md
golden/sandbox/tests/: test_calc.py  test_inventory.py  test_multiply.py  test_strings.py
golden/tasks/: burn-add-docstring-nogo.yaml  burn-add-power-go.yaml  burn-add-readme-section-go.yaml  burn-add-strings-title-go.yaml  burn-add-subtract-go.yaml  burn-fix-multiply-go.yaml  burn-fix-multiply-nogo.yaml  burn-inception-docs-go.yaml  sim-count-tests.yaml  sim-diagnose-multiply-bug.yaml  sim-explain-total-price.yaml  sim-find-strings-functions.yaml  sim-inception-scope.yaml  sim-list-modules.yaml  sim-list-public-functions.yaml  sim-readme-project-name.yaml
scripts/: control-center.sh  e2e_5c.py  e2e_phase5a.py  e2e_phase5b_browser.py  e2e_phase6.py  e2e_phase8.py  vendor_aidlc_v2.py
src/mission_control/: __init__.py  aidlc.py  analytics.py  baseline.py  cli.py  content_guard.py  demo.py  demo_gate.py  demo_graph.py  demo_live.py  demo_phase4.py  demo_resume.py  demo_sdk.py  eval_gate.py  eval_gate_mcp.py  evals.py  graph.py  judge.py  live.py  orchestrator.py  plan_docs.py  plans_store.py  pricing.py  project_ref.py  repo_source.py  roles.py  runs_store.py  sdk_worker.py  slack_registry.py  tasks.py  telemetry.py  worker.py  worktree.py
src/mission_control/aidlc_v2/: README.md  __init__.py  catalog.py  install.py  plan.py  state.py  steering.py
src/mission_control/aidlc_v2/methodology/: VENDOR.json
src/mission_control/service/: __init__.py  __main__.py  alerts.py  app.py  manager.py  metrics.py  models.py  plan_builder.py  plan_models.py  planner.py  plans.py  spa.py
src/mission_control/slack/: __init__.py  bridge.py  cursor.py  message.py
tests/: conftest.py  test_aidlc.py  test_aidlc_v2_catalog.py  test_aidlc_v2_install.py  test_aidlc_v2_plan.py  test_aidlc_v2_state.py  test_aidlc_v2_steering.py  test_alerts.py  test_analytics.py  test_auth.py  test_baseline.py  test_build_resume.py  test_cli.py  test_content_guard.py  test_eval_gate.py  test_eval_gate_mcp.py  test_evals.py  test_graph.py  test_graph_postgres.py  test_greenfield_bootstrap.py  test_judge.py  test_live.py  test_notifications_seam.py  test_orchestration.py  test_plan_build.py  test_plan_docs.py  test_planner_brownfield.py  test_planner_engine.py  test_plans_service.py  test_plans_store.py  test_pricing.py  test_project_ref.py  test_push.py  test_repo_source.py  test_run_changes.py  test_runs_store.py  test_sdk_worker.py  test_seam_completeness.py  test_service.py  test_slack_bridge.py  (+9 more)
(+26 files in other folders)
