[project]
name = "mission-control"
version = "0.0.0"
description = "An agent-orchestration runtime: spawns workers, isolates them in git worktrees, supervises them, records telemetry, and gates side effects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyyaml",  # loads the Phase 2 golden-set task specs (golden/tasks/*.yaml)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mission_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
