[project]
name = "mission-control"
version = "0.0.0"
description = "An agent-orchestration runtime: spawns workers, isolates them in git worktrees, supervises them, records telemetry, and gates side effects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "pyyaml",  # loads golden-set task specs; needed by the eval-gate console script
    "langgraph>=1.2,<2",  # durable orchestration shell (Phase 4)
    "langgraph-checkpoint-postgres>=3.1,<4",  # PostgresSaver checkpointer (wired in L2)
    "duckdb>=1.5,<2",  # columnar query layer over the JSONL analytics spine (L4)
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
eval-gate = "mission_control.eval_gate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mission_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
