[project]
name = "mission-control"
version = "0.0.0"
description = "An agent-orchestration runtime: spawns workers, isolates them in git worktrees, supervises them, records telemetry, and gates side effects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "pyyaml",  # loads golden-set task specs; needed by the eval-gate console script
    "langgraph>=1.2,<2",  # durable orchestration shell (Phase 4)
    "langgraph-checkpoint-postgres>=3.1,<4",  # PostgresSaver checkpointer (wired in L2)
    "duckdb>=1.5,<2",  # columnar query layer over the JSONL analytics spine (L4)
    "fastapi>=0.115",  # the service seam: HTTP wrapper over the graph (Phase 5a)
    "sse-starlette>=2",  # text/event-stream for the live run feed
    "uvicorn>=0.30",  # ASGI server for `python -m mission_control.service`
    "httpx>=0.27",  # the CLI drives the runtime as a client of the service API
    "jinja2>=3.1",  # server-rendered web UI templates (Phase 5b)
    "python-multipart>=0.0.9",  # HTML form parsing for the UI launch form
    "slack-bolt>=1.18",  # Socket Mode bridge: outbound WebSocket, no public endpoint (Phase 5c)
    "slack-sdk>=3.27",  # Slack Web API client (posting) + Socket Mode client
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
eval-gate = "mission_control.eval_gate:main"
mission-control = "mission_control.cli:main"
mission-control-slack = "mission_control.slack.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mission_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
